rearc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rearc-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: rearc-app
          servicePort: 80
        path: /my-rearc-app(/|$)(.*)
  - host: a54bfcf87781145eb9bdcebe64cbd9a8-1102758084.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: rearc-app
          servicePort: 80
        path: /my-rearc-app
