vi ssl-tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - a54bfcf87781145eb9bdcebe64cbd9a8-1102758084.us-east-1.elb.amazonaws.com
      secretName: app-web-cert
  rules:
  - host: a54bfcf87781145eb9bdcebe64cbd9a8-1102758084.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: rearc-app
          servicePort: 80
        path: /
~
